fix: dark mode guideline

--- a/custom.css
+++ b/custom.css
@@ -1195,7 +1195,7 @@ html[data-theme="dark"] {
 
   --ct-hr-border-top: 1px solid #373737;
 
-  --ct-guideline-color: #2d2d2d;
+  --ct-guideline-color: #484848;
   --ct-guideline-size: 1px;
   --ct-guideline-style: solid;
 
